@@ -36,6 +36,7 @@ function status_load_scripts() {
 	if ( !is_admin() ) { 
 		wp_enqueue_script("jquery");
 		wp_enqueue_script('modernizr', get_stylesheet_directory_uri() . '/_inc/scripts/modernizr.js', array("jquery"), '2.0');
+		wp_enqueue_script('status-scripts', get_stylesheet_directory_uri() . '/_inc/scripts/status-scripts.js', array("jquery"), status_get_file_last_mod('status-scripts.js'));
 		if ( is_singular() && get_option( 'thread_comments' ) && comments_open() )
 			wp_enqueue_script( 'comment-reply' );
 	}
@@ -44,7 +45,14 @@ endif;
 
 // Cache busting dynamically
 function status_get_file_last_mod($filename) {
- $filename = dirname(__FILE__) . '/_inc/css/' . $filename;
+	// what type of file? get the last bit after the dot
+	$filetype = explode('.', $filename);
+	//echo $filetype[1];
+	if($filetype[1] == 'css'){
+ 	$filename = dirname(__FILE__) . '/_inc/css/' . $filename;
+	}elseif($filetype[1] == 'js'){
+		$filename = dirname(__FILE__) . '/_inc/scripts/' . $filename;
+	}
 	if( file_exists($filename) ){
 		$version =  date ("M d Y H:i:s.", filemtime($filename));
 	}else{
